src/ContosoTraders.Api.Products/Manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-traders-products
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: contoso-traders-products
